--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@emotion/styled": "^11.10.0",
     "@fontsource/lato": "^4.5.9",
     "@fontsource/open-sans": "^4.5.11",
+    "feed": "^4.2.2",
     "framer-motion": "^7.0.0",
-    "next": "12.2.3",
+    "next": "^12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
