--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "feed": "^4.2.2",
     "framer-motion": "^7.0.0",
     "next": "^12.2.5",
+    "next-seo": "^5.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
