--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.0",
     "@fontsource/lato": "^4.5.9",
     "@fontsource/open-sans": "^4.5.11",
+    "@happykit/analytics": "^1.0.1",
     "feed": "^4.2.2",
     "framer-motion": "^7.0.0",
     "next": "^12.2.5",
